# Kasa1

./: CMakeLists.txt  input.txt  library.cp36-win_amd64.pyd  library.cpp  library.h  main.cpp  main.py  output.txt  quickhull_python.py  test_main.py
